test/integration/bad/lang/bad_bounds7.stan
data {
 ordered<offset=0><lower=0> x;
}